maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:5: error: not found: value radom3
    r = radom3();
        ^